Fixed filter buttons wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,22 @@ nav p {
 
 .filters {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 15px;
+  width: 100%;
 }
 
 .filters p {
   margin: 0;
+  display: inline;
+}
+
+.filters-buttons-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .filters, .filters button {
@@ -147,6 +156,7 @@ nav p {
   display: flex;
   align-items: center;
   cursor: pointer;
+  height: 50px;
 }
 
 .filters button:hover {
